Wed Dec 15 11:13:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSResponder.m: Don't try to encode/decode next responder -
	this info should be reconstructed by subclasses.
	* Source/NSWindow.m: Remove code to save/restore next responder in
	order to defeat NSResponder archiving.
	* Source/NSView.m: Rewrite encoding/decoding.

Tue Dec 14 19:40:12 1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSBrowserCell.m: Tiny tidings in initialization;
 	([-drawInteriorWithFrame:inView:]): Rewritten so that
 	alternateImage is correctly supported.  If the cell is of type
 	NSImageCellType, and alternate image is set, it is drawn instead
 	of the standard image when the cell is highlighted.  Untested.
	* Source/NSCell.m ([-_init]): Removed method; code moved  
	to ([-initTextCell:]),([-initImageCell:]); redundancies 
 	removed.

Tue Dec 14 19:07:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSApplication.m: modal session fixes (and tidying) suggested
	by georg@mondoshawan.unix.cslab.tuwien.ac.at

Tue Dec 14 16:51:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: ([-becomeKeyWindow]) Don't ask the backend to
	make us key unless we are visible.
	([-orderWindow:relativeTo:]) ask backned to make us key when we order
	in (if we should be key that is).

Tue Dec 14 11:15:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSMenuitemCell.h: Removed implementation cache ivars
	and added an ivar for temporary storage of background color.
	* Source/NSMenuItemCell.m: Removed draw implementation caching to
	decrease memory footprint, but added color and image class caching
	which will more than compensate in performance.  Also added use of
	highlight version of menu arrow.
	* Source/NSImage.m: minor image caching fixes and more debug statements.

1999-12-13    <fedor@gnu.org>

	* Source/NSWindow.m (-_processResizeEvent): Add DPScurrentgstate